# agent-cli-session-TUI

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.toml.example  config.toml.template
.cargo/: config.toml
.github/instructions/: cross-platform.instructions.md  performance.instructions.md  plugin.instructions.md  rust.instructions.md  security.instructions.md  tab-focus.instructions.md  testing.instructions.md
.github/workflows/: release.yml  rust.yml
.qwen/: settings.json  settings.json.orig
providers/: claude.yaml  codex.yaml  copilot.yaml  gemini.yaml  qwen.yaml
scripts/: generate_config.py  validate_configs.py
semantic-plugin/: Cargo.toml
semantic-plugin/src/: lib.rs
src/: archive.rs  config.rs  lib.rs  log.rs  log_search.rs  main.rs  models.rs  process_info.rs  search.rs  util.rs  wt_tabs.rs
src/focus/: mod.rs  win.rs
src/provider/: mod.rs
src/provider/claude/: mod.rs
src/provider/codex/: mod.rs
src/provider/config_driven/: eval.rs  mod.rs  schema.rs
src/provider/copilot/: mod.rs
src/provider/gemini/: mod.rs
src/provider/qwen/: mod.rs
src/supervisor/: mod.rs
src/testing/: mod.rs  scenarios.rs
src/ui/: mod.rs
tests/: claude_lifecycle_test.rs  codex_lifecycle_test.rs  copilot_lifecycle_test.rs  gemini_lifecycle_test.rs  qwen_lifecycle_test.rs
v3-draft/: claude.yaml  codex.yaml  copilot.yaml  gemini.yaml  qwen.yaml
