[package]
name = "agent-session-tui"
version = "0.1.0"
edition = "2021"
description = "TUI for managing agent CLI sessions (Copilot CLI, Claude Code, etc.)"

[dependencies]
# TUI — crossterm backend only, no extras
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", default-features = false, features = ["windows", "events"] }

# Async runtime — only channels, timers, spawn
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time"] }

# Config & serialization
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = "6"
anyhow = "1"

# Process info — disable disk/network/component/user, keep only process lookup
[target.'cfg(windows)'.dependencies]
sysinfo = { version = "0.33", default-features = false, features = ["system", "windows"] }

[target.'cfg(unix)'.dependencies]
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[profile.release]
opt-level = "z"       # Optimize for size
lto = "thin"          # Thin LTO — fast builds, good size reduction
codegen-units = 4     # Parallel codegen
strip = true          # Strip debug symbols
panic = "abort"       # No unwind tables
